# repo-janitor

./: .env.example  .gitignore  .repo-janitor.toml.example  CHANGELOG.md  COMO_USAR.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY_AUDIT.md  pyproject.toml  requirements.txt  security_report.html
.repo-janitor/: vuln_cache.db
janitor/: __init__.py  analyzer.py  cli.py  core.py  dependency_scanner.py  hooks.py  js_analyzer.py  language_detector.py  llm.py  scanner.py  types.py
janitor/analyzers/: __init__.py  base.py  c_cpp.py  csharp.py  dart.py  go.py  java.py  javascript.py  kotlin.py  php.py  python.py  ruby.py  rust.py  swift.py  typescript.py
janitor/legacy/: __init__.py  manager.py
janitor/outputs/: __init__.py  html_report.py
janitor/tests/: __init__.py  example_vulnerable.js  example_vulnerable.py  example_vulnerable.ts  test_analyzer.py  test_manager.py  test_scanner.py
