[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-janitor"
version = "0.1.0"
description = "AI-powered repository auditor and refactoring assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "repo-janitor team"}
]
requires-python = ">=3.10"
keywords = ["security", "audit", "static-analysis", "llm", "nvidia", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
repo-janitor = "janitor.cli:main"

[project.urls]
"Homepage" = "https://github.com/your-username/repo-janitor"
"Bug Tracker" = "https://github.com/your-username/repo-janitor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["janitor*"]

[tool.pytest.ini_options]
testpaths = ["janitor/tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
